# trailmix

./: CLAUDE.md  README.md  justfile  pyproject.toml
.claude/skills/trailmix/: SKILL.md
src/trailmix/: __init__.py  cli.py  config.py  git.py  granola.py  sync.py
tests/: test_config.py  test_sync.py
