[project]
name = "trailmix"
version = "0.1.0"
description = "Sync Granola meeting notes to a git repo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trailmix = "trailmix.cli:main"

[dependency-groups]
dev = ["ruff", "ty", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trailmix"]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
